[gd_scene load_steps=8 format=3 uid="uid://b74s5mvppnnq3"]

[ext_resource type="Script" uid="uid://c7ot4aoktmc7e" path="res://Sprites/Food/food.gd" id="1_pohk7"]
[ext_resource type="Texture2D" uid="uid://rxk4x61nfyh1" path="res://Sprites/Food/1900x1900-000000-80-0-0.jpg" id="2_dcawb"]
[ext_resource type="Texture2D" uid="uid://bxxgrutuxbe5e" path="res://Sprites/Food/maximiliangamer.png" id="2_n0nmm"]
[ext_resource type="Script" uid="uid://dh32usfi2pkal" path="res://Sprites/Food/microwave_detector.gd" id="3_vrchw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dcawb"]
size = Vector2(60.4445, 131.765)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(135.111, 131.765)

[sub_resource type="CircleShape2D" id="CircleShape2D_lquwl"]
radius = 382.449

[node name="food" type="Area2D"]
position = Vector2(116, 559)
scale = Vector2(0.5625, 0.53125)
monitorable = false
script = ExtResource("1_pohk7")
texture = ExtResource("2_n0nmm")

[node name="microwave_detector" type="Area2D" parent="."]
script = ExtResource("3_vrchw")

[node name="detection_area" type="CollisionShape2D" parent="microwave_detector"]
position = Vector2(49.7778, 33.8823)
shape = SubResource("RectangleShape2D_dcawb")

[node name="food_sprite" type="Sprite2D" parent="."]
position = Vector2(53.3333, 35.7648)
scale = Vector2(0.134074, 0.134074)
texture = ExtResource("2_dcawb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(49.7778, 33.8823)
shape = SubResource("RectangleShape2D_lquwl")

[node name="mouse_drag" type="CollisionShape2D" parent="."]
position = Vector2(49.7778, 33.8824)
shape = SubResource("CircleShape2D_lquwl")
disabled = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="microwave_detector" to="microwave_detector" method="_on_area_entered"]
[connection signal="area_exited" from="microwave_detector" to="microwave_detector" method="_on_area_exited"]
